--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>FirstSpringBootWeb</groupId>
-    <artifactId>esayweb-boke</artifactId>
+    <artifactId>Easyweb-boke</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>esayweb-boke</name>
+    <name>Easyweb-boke</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
