add shopcar's statistics and update log

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-###ThymeLeaf配置
 server:
   tomcat:
     uri-encoding: UTF-8
@@ -13,17 +12,14 @@ server:
 #    path: output/logs
 
 spring:
-#  devtools:
-#    restart:
-#      enabled: true # 配置热部署
+  redis:
+    host: 127.0.0.1
+    port: 6379
   thymeleaf:
     #模板的模式，支持 HTML, XML TEXT JAVASCRIPT
     mode: HTML
-    #编码 可不用配置
     encoding: UTF-8
-    #开发配置为false,避免修改模板还要重启服务器
     cache: false
-    #配置模板路径，默认是templates，可以不用配置
     prefix: classpath:/templates/
   datasource:
     url: jdbc:mysql://localhost:3306/myboke?charset=utf8mb4&useSSL=false
@@ -47,7 +43,6 @@ spring:
     maxPoolPreparedStatementPerConnectionSize: 20
     useGlobalDataSourceStat: true
     connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500;druid.mysql.usePingMethod=false
-
 #debug: true
 
 mybatis:
